syntax = "proto3";
package tutorial;



option csharp_namespace = "QuixStreams.Telemetry.Models.Codecs";


message TimeseriesDataRawProto {
    int64 epoch = 1;
    repeated int64 timestamps = 2;

    message NumericValues{
        string header = 1;
        repeated bool isnull = 2;
        repeated double values = 3;
    }
    
    message StringValues{
        string header = 1;
        repeated bool isnull = 2;
        repeated string values = 3;
    }
    
    message BinaryValues{
        string header = 1;
        repeated bool isnull = 2;
        repeated bytes values = 3;
    }


    repeated NumericValues numeric_values = 3;
    repeated StringValues string_values = 4;
    repeated BinaryValues binary_values = 5;
    repeated StringValues tag_values = 6;
}